# vibeslurm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
env/: pixi.toml
tests/: __init__.py  test_vibeslurm.py
vibeslurm/: __init__.py  __main__.py  gui.py  main.py  slurm.py
